--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Edit _config.yml to set your title!
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
-github_username: jph00
+title: Production Mapping on the Cheap
+description: Blog about using ArcGIS Online and other COTS software options to deploy field mapping solutions
+github_username: DanCranford
 
 # Email and twitter are optional:
 email:
